cilium-monitoring/grafana/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana
    component: core
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - env:
            - name: GF_PATHS_CONFIG
              value: /configmap/grafana/grafana-config.ini
            - name: GF_PATHS_PROVISIONING
              value: /configmap/grafana/provisioning
          image: "docker.io/grafana/grafana:12.0.0"
          imagePullPolicy: IfNotPresent
          name: grafana-core
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /login
              port: 3000
              scheme: HTTP
          volumeMounts:
            - mountPath: /configmap/grafana
              name: grafana-config
              readOnly: true
            - mountPath: /configmap/dashboards/cilium-dashboard
              name: cilium-dashboard
              readOnly: true
            - mountPath: /configmap/dashboards/cilium-operator-dashboard
              name: cilium-operator-dashboard
              readOnly: true
            - mountPath: /configmap/dashboards/hubble-dashboard
              name: hubble-dashboard
              readOnly: true
            - mountPath: /configmap/dashboards/zero-trust-monitoring-full
              name: zero-trust-monitoring-full
              readOnly: true
            - mountPath: /configmap/dashboards/zero-trust-monitoring
              name: zero-trust-monitoring
              readOnly: true
            - mountPath: /configmap/dashboards/zero-trust-k8s-grafana-datasource-v2
              name: zero-trust-k8s-grafana-datasource-v2
              readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - configMap:
            defaultMode: 420
            items:
              - key: grafana.ini
                path: grafana-config.ini
              - key: prometheus-datasource.yaml
                path: provisioning/datasources/prometheus.yaml
              - key: config.yaml
                path: provisioning/dashboards/config.yaml
            name: grafana-config
          name: grafana-config
        - configMap:
            defaultMode: 420
            name: grafana-cilium-dashboard
          name: cilium-dashboard
        - configMap:
            defaultMode: 420
            name: grafana-cilium-operator-dashboard
          name: cilium-operator-dashboard
        - configMap:
            defaultMode: 420
            name: grafana-hubble-dashboard
          name: hubble-dashboard
        - configMap:
            defaultMode: 420
            name: grafana-zero-trust-monitoring-full
          name: zero-trust-monitoring-full
        - configMap:
            defaultMode: 420
            name: grafana-zero-trust-monitoring
          name: zero-trust-monitoring
        - configMap:
            defaultMode: 420
            name: grafana-zero-trust-k8s-grafana-datasource-v2
          name: zero-trust-k8s-grafana-datasource-v2
